# low-precision-nnd

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md
data/weights/128-64-32/int4/: first_hidden  input  output  second_hidden
data/weights/128-64-32/int8/: first_hidden  input  output  second_hidden
data/weights/128-64-32/lut2/: first_hidden  input  output  second_hidden
data/weights/256-128-64/int4/: first_hidden  input  output  second_hidden
data/weights/256-128-64/int8/: first_hidden  input  output  second_hidden
data/weights/256-128-64/lut2/: first_hidden  input  output  second_hidden
data/weights/512-256-128/int3/: first_hidden  input  output  second_hidden
data/weights/512-256-128/int4/: first_hidden  input  output  second_hidden
data/weights/512-256-128/int5/: first_hidden  input  output  second_hidden
data/weights/512-256-128/int6/: first_hidden  input  output  second_hidden
data/weights/512-256-128/int7/: first_hidden  input  output  second_hidden
data/weights/512-256-128/int8/: first_hidden  input  output  second_hidden
data/weights/512-256-128/lut2/: first_hidden  input  output  (+1 more)
python/: Pipfile
python/models/: layers.py  nn_decoder.py
python/references/polar/: encoder.py  scdecoder.py  sequence.py
python/simulation/: run.py
python/simulation/utilities/: channel.py  demapper.py  modulation.py
source/polar_decoder/: CMakeLists.txt  DecoderMain.cpp  DecoderMain.h  DenseLayer.cpp  DenseLayer.h  FixedPoint.h  NeuralDecoder.cpp  NeuralDecoder.h  NeuralUtilities.cpp  NeuralUtilities.h  Utilities.cpp  Utilities.h
